package com.uitopic.restock.platform.subscriptions.domain.model.valueobjects;

public enum PaymentStatus {
    PENDING,
    PROCESSING,
    ACCEPTED,
    FAILED,
    REFUNDED
}
